# boxes-counting

./: CMakeLists.txt  Newton_fractal.cpp  Newton_fractal.h  NullComplex.h  Polynomial.cpp  Polynomial.h  README.md  boxes_algorithm.cpp  boxes_algorithm.h  main.cpp  newtons_method.cpp  newtons_method.h  random_complex.cpp  random_complex.h
